# Vulkraft

./: .gitignore  .gitmodules  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  README.md  build.ninja  cmake_install.cmake  main.cpp  rules.ninja
.cmake/api/v1/reply/: cache-v2-6ab7e949fb134cd61357.json  cmakeFiles-v1-d055fde0984a0d7e60e6.json  codemodel-v2-31c4f40974643a3a3917.json  directory-headers-9dcf148947487fa8c6fd.json  directory-headers.glfw-80c5ca8e7609ac4d000e.json  directory-headers.glfw.src-44ac9ddd090593207f58.json  index-2022-07-01T12-45-09-0546.json  target-glfw-4780277c6b9dd17b4e58.json  target-main-8bc8d5bbba55b8c9e096.json  target-uninstall-a5420b5a16c07dfd48ad.json  target-update_mappings-7ee3d022c045d3ca92bb.json
headers/: CMakeLists.txt  cmake_install.cmake
shaders/: frag.spv  shader.frag  shader.vert  vert.spv
src/: AABB.cpp  AABB.hpp  camera.cpp  camera.hpp  chunk.cpp  chunk.hpp  main.cpp  movement.cpp  movement.hpp  player.cpp  player.hpp  ray.cpp
src/blocks/: block.cpp  block.hpp
src/camera/: camera.cpp
src/chunk/: chunk.cpp  chunk.hpp
src/movement/: movement.cpp  movement.hpp
src/player/: player.cpp  player.hpp
src/raycast/: trace-ray.cpp  trace-ray.hpp
src/structures/: structure.cpp  structure.hpp
src/utils/: enums.cpp  enums.hpp
